--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,5 +13,6 @@
   </head>
   <body>
     
-    Test
+    Here are some of the nueralization papers
+    <img src="judithHaltonNutr.png">
   </body>
