--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
+img {width: 200px;
+  height: 300px;
+ object-fit: contain;}
 </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   </head>
