--- a/weil.html
+++ b/weil.html
@@ -6,54 +6,170 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body {
-        background-color: powderblue;
+        background-color: #ededed;
+        padding: 30px;
       }
       h1 {
-        color: blue;
+        color: #333333;
+        text-align: center;
+        align-items: center;
       }
       p {
-        color: red;
+        color: #333333;
       }
       img {
-        width: 100%;
+        width: 45%;
         height: auto;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 20px;
+        margin-bottom: 20px;
       }
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   </head>
   <body>
-    Weil Family story Emilie Dreyfuss (Bubby’s maternal grandmother) b. 1863
-    Husband Jacob (Issac, Seligman) Druyfuss (b 1863) Father - Menachem d. Mar
-    15, 1944 IMG Renee Rebecca Battegay (Bubby’s aunt, Marie’s sister) d. Nov
-    19, 1971 buried Baron de Hirsch - De la Savane Cemetery (Ahavath David (Map:
-    B11) Line 3, Grave 256 LINK Myrtil (Meir) Weil – Bubby’s father B May 5,
-    1897 in Bouxemller (BasRhin, Alsace) France d. June 15, 1950 (10:15am) in
-    Paris, France. Buried in: Parisian Cemetery, Pantin (Seine), France 86th
-    division, 12th row, grave no 41 Marie (Anne, Chana) Weil – Bubby’s mother b.
-    May 22, 1897 in Strasbourg, France Married Feb 15, 1922 in Strasbourg,
-    France Judith Ellen B July 27, 1923 Rebecca B Nov 30, 1925 Michele (Miryam,
-    Micheline) B Feb 17, 1928 Leopold (Marcel, Eliezer) B June 22, 1929 Danielle
-    B Feb 20, 1934 Myrtyl and Marie, and their children (other than Micheline)
-    arrived in NY on March 25, 1939 from Le Havre France on the ship Normandia.
-    Marie’s mother Emilie also came with them. Marie’s father Isaac Seligman was
-    also supposed to come – a ticket had been purchased for him – but he died in
-    1939 before the family left to NY. IMG manifest (cousin albert Bader – same
-    person signed nutr papers) IMG manifest france IMG nutr papers IMG nutr
-    papers IMG nutr papers IMG dr papers IMG census LINK Bubby’s grandmother’s
-    maiden name was also Dryfuss – she was an orphan. Bubby remembers going on
-    walks with her grandmother in NY and helping her take baths. Her grandmother
-    is buried in Long Island because that was the cemetery of the French shul
-    they davened at in NY. Bubby’s father and aunt Gaby went back to France in
-    1947. Gaby wanted to go to medical school and was not aboe to get into
-    school in the US. Bubby’s father died in Paris in 1950 and is buried there.
-    IMG death paper Micheline was taken to China by her aunt Renee Battegay
-    around 1938. Renee and her husband Mathieu were wealthy and traveled between
-    China, Europe and the US many times. IMG 22 IMG 28 IMG 39 After WWII Bubby’s
-    mother got Micheline out of China through the Red Cross and she came to the
-    US in March of 1947. IMG Renee (also through the help of her sister Marie)
-    came to the US in July of 1947. IMG IMG travel to Canada Micheline lived
-    with her Mother in NY for about a year and then went to her aunt Renee in
-    Montreal. Bubby’s mother is buried in Breouers section of king solomon
-    memorial park because they were affiliated with bruers at that time.
+    <h1>
+      Weil Family <br />
+      <img
+        style="solid #ddd; border-radius: 4px; padding: 5px; width: 150px; align-content: center;"
+        src="myrtil.png"
+      />
+    </h1>
+    <h2>People</h2>
+    <ul>
+      <li>
+        Emilie Dreyfuss (Bubby’s maternal grandmother)
+        <ul>
+          <li>b. 1863</li>
+          <li>d. Mar 15, 1944</li>
+          <li>Husband: Jacob (Issac, Seligman) Druyfuss (b. 1863)</li>
+          <li>Father: Menachem</li>
+        </ul>
+        <a href="https://www.findagrave.com/memorial/165148954/emilie-dreyfuss">
+          <img src="miriamEmelieDruyfussGrave.jpeg" />
+        </a>
+      </li>
+      <li>
+        Renee Rebecca Battegay (Bubby’s aunt, Marie’s sister)
+        <ul>
+          <li>d. Nov 19, 1971</li>
+          <li>
+            Buried: Baron de Hirsch - De la Savane Cemetery Ahavath David (Map:
+            B11) Line 3, Grave 256 (<a
+              href="https://jowbr.org/record.cgi?dir=BdH/B11&loc=03:256&referer=jgs-montreal.org"
+              >Source</a
+            >)
+          </li>
+        </ul>
+      </li>
+      <li>
+        Myrtil (Meir) Weil – Bubby’s father
+        <ul>
+          <li>b. May 5, 1897 in Bouxemller (BasRhin, Alsace) France</li>
+          <li>d. June 15, 1950 (10:15am) in Paris, France.</li>
+          <li>
+            Buried: Parisian Cemetery, Pantin (Seine), France 86th division,
+            12th row, grave no 41
+          </li>
+        </ul>
+      </li>
+      <li>
+        Marie (Anne, Chana) Weil – Bubby’s mother
+        <ul>
+          <li>b. May 22, 1897 in Strasbourg, France</li>
+          <li>Married: Feb 15, 1922 in Strasbourg, France</li>
+        </ul>
+        Kids:
+      </li>
+      <ul>
+        <li>Judith Ellen b. July 27, 1923</li>
+        <li>Rebecca b. Nov 30, 1925</li>
+        <li>Michele (Miryam, Micheline) b. Feb 17, 1928</li>
+        <li>Leopold (Marcel, Eliezer) b. June 22, 1929</li>
+        <li>Danielle B Feb 20, 2000</li>
+      </ul>
+    </ul>
+    <br />
+    <h2>The story</h2>
+    <br />
+    Bubby's parents Myrtyl & Marie, and their children (other than Micheline)
+    arrived in NY on March 25, 1939 from Le Havre France on the ship
+    Normandia.<br />
+    Marie’s mother Emilie came along with them. <br />
+    Marie’s father Isaac Seligman was also supposed to come – a ticket had been
+    purchased for him – but he died in 1939 before the family left to NY.
+    (cousin albert Bader – same person signed nutr papers)
+
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/7488/images/NYT715_6304-0504?treeid=&personid=&hintid=&queryId=454468a445a819afec0db89ddac1e922&usePUB=true&_phsrc=hob117&_phstart=successSource&usePUBJs=true&pId=1004159594"
+    >
+      <img src="weilManifest1.jpg" /></a
+    ><br />
+
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9NJ-9WQG?i=593&cc=2299396&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQG2Q-FGGG"
+    >
+      <img src="weilManifest2.jpg" /></a
+    ><br />
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:3QS7-L9HD-57W3?i=1170&cc=2060123&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQP7D-KWWK"
+    >
+      <img src="myrtilNutrPapersFront.jpg" /></a
+    ><br />
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9HD-5Q5K?i=1171&cc=2060123"
+    >
+      <img src="myrtilNutrPapersFront2.jpg" /></a
+    ><br />
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/2280/images/47294_302022005557_0694-00222?treeid=&personid=&hintid=&queryId=a7276480a87927f53309f90eb2c6ba75&usePUB=true&_phsrc=hob113&_phstart=successSource&usePUBJs=true&pId=6755375"
+    >
+      <img src="judithHaltonNutr.png" /></a
+    ><br />
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
+    >
+      <img src="myrtilDoctorCardFront.png" /></a
+    ><br />
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
+    >
+      <img src="myrtilDoctorCardBack.png" /></a
+    ><br />
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/2442/images/m-t0627-02673-00561?usePUB=true&_phsrc=hob187&_phstart=successSource&usePUBJs=true&pId=11958940"
+    >
+      <img src="weilCensus1940.png" /></a
+    ><br />
+    <br />
+    <br />
+
+    <br />Bubby’s grandmother’s maiden name was also Dryfuss – she was an
+    orphan. Bubby remembers going on walks with her grandmother in NY and
+    helping her take baths. Her grandmother is buried in Long Island. That was
+    the cemetery of the French shul they davened at in at the time.
+    <br />Bubby’s father and aunt Gaby went back to France in 1947. Gaby wanted
+    to go to medical school and could not get into school in the US. Bubby’s
+    father died in Paris in 1950 and is buried there.
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/1616/images/31070_B017484-00396?treeid=&personid=&hintid=&queryId=9dc1f45a4a7d1b5a483128c3d6cf31d1&usePUB=true&_phsrc=hob129&_phstart=successSource&usePUBJs=true&pId=45185483"
+    >
+      <img src="myrtilDeathFront.jpg" />
+    </a>
+    <br />
+    <img src="myrtilDeathBack.jpg" />
+    <br />
+
+    <br />Micheline was taken to China by her aunt Renee Battegay around 1938.
+    Renee and her husband Mathieu were wealthy and traveled between China,
+    Europe and the US many times. IMG 22 IMG 28 IMG 39 <br />
+    After WWII Bubby’s mother got Micheline out of China through the Red Cross
+    and she came to the US in March of 1947. IMG<br />
+    Renee (also through the help of Bubby's mother) came to the US in July of
+    1947. IMG IMG travel to Canada Micheline lived with her Mother in NY for
+    about a year and then went to her aunt Renee in Montreal. <br />
+    Bubby’s mother is buried in Breouers section of king solomon memorial park
+    because they were affiliated with bruers at that time.
   </body>
 </html>
