--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         background-color: #ededed;
         padding: 30px;
+        font-family: 'Segoe UI', Arial, sans-serif;
       }
       h1 {
         color: #333333;
@@ -26,14 +28,13 @@
         margin-bottom: 20px;
       }
     </style>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   </head>
   <body>
     <h1>
       Weil Family <br />
       <img
         style="solid #ddd; border-radius: 4px; padding: 5px; width: 150px; align-content: center;"
-        src="myrtil.png"
+        src="img/myrtil.png"
       />
     </h1>
     <h2>People</h2>
@@ -47,7 +48,7 @@
           <li>Father: Menachem</li>
         </ul>
         <a href="https://www.findagrave.com/memorial/165148954/emilie-dreyfuss">
-          <img src="miriamEmelieDruyfussGrave.jpeg" />
+          <img src="img/miriamEmelieDruyfussGrave.jpeg" />
         </a>
       </li>
       <li>
@@ -100,48 +101,60 @@
     Marie’s father Isaac Seligman was also supposed to come – a ticket had been
     purchased for him – but he died in 1939 before the family left to NY.
     (cousin albert Bader – same person signed nutr papers)
+    <br />
 
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/7488/images/NYT715_6304-0504?treeid=&personid=&hintid=&queryId=454468a445a819afec0db89ddac1e922&usePUB=true&_phsrc=hob117&_phstart=successSource&usePUBJs=true&pId=1004159594"
     >
-      <img src="weilManifest1.jpg" /></a
+      <img title="ship manifest" src="img/weilManifest1.jpg" /></a
     ><br />
 
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9NJ-9WQG?i=593&cc=2299396&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQG2Q-FGGG"
     >
-      <img src="weilManifest2.jpg" /></a
+      <img title="French manifest" src="img/weilManifest2.jpg" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-L9HD-57W3?i=1170&cc=2060123&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQP7D-KWWK"
     >
-      <img src="myrtilNutrPapersFront.jpg" /></a
+      <img
+        title="Myrtil naturalization papers"
+        src="img/myrtilNutrPapersFront.jpg" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9HD-5Q5K?i=1171&cc=2060123"
     >
-      <img src="myrtilNutrPapersFront2.jpg" /></a
+      <img
+        title="Myrtil naturalization papers"
+        src="img/myrtilNutrPapersFront2.jpg" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/2280/images/47294_302022005557_0694-00222?treeid=&personid=&hintid=&queryId=a7276480a87927f53309f90eb2c6ba75&usePUB=true&_phsrc=hob113&_phstart=successSource&usePUBJs=true&pId=6755375"
     >
-      <img src="judithHaltonNutr.png" /></a
+      <img
+        title="Judith Halton naturalization papers"
+        src="img/judithHaltonNutr.png" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
     >
-      <img src="myrtilDoctorCardFront.png" /></a
+      <img title="Myrtil MD" src="img/myrtilDoctorCardFront.png" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
     >
-      <img src="myrtilDoctorCardBack.png" /></a
+      <img title="Myrtil MD" src="img/myrtilDoctorCardBack.png" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/2442/images/m-t0627-02673-00561?usePUB=true&_phsrc=hob187&_phstart=successSource&usePUBJs=true&pId=11958940"
     >
-      <img src="weilCensus1940.png" /></a
+      <img title="Weil 1940 census" src="img/weilCensus1940.png" /></a
     ><br />
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/2469/images/1899481?usePUB=true&_phsrc=hob216&_phstart=successSource&usePUBJs=true&pId=1483972135"
+    >
+      <img title="phone book" src="img/myrtilPhonebook.png"
+    /></a>
     <br />
     <br />
 
@@ -155,21 +168,58 @@
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/1616/images/31070_B017484-00396?treeid=&personid=&hintid=&queryId=9dc1f45a4a7d1b5a483128c3d6cf31d1&usePUB=true&_phsrc=hob129&_phstart=successSource&usePUBJs=true&pId=45185483"
     >
-      <img src="myrtilDeathFront.jpg" />
+      <img
+        title="Myrtil US consulate death notice"
+        src="img/myrtilDeathFront.jpg"
+      />
     </a>
     <br />
-    <img src="myrtilDeathBack.jpg" />
+    <img
+      title="Myrtil US consulate death notice - back"
+      src="img/myrtilDeathBack.jpg"
+    />
     <br />
-
+    Bubby’s mother is buried in Breuer's section of King Solomon Memorial Park
+    since they were affiliated with the Bruer Kehilla at the time.
     <br />Micheline was taken to China by her aunt Renee Battegay around 1938.
     Renee and her husband Mathieu were wealthy and traveled between China,
-    Europe and the US many times. IMG 22 IMG 28 IMG 39 <br />
-    After WWII Bubby’s mother got Micheline out of China through the Red Cross
-    and she came to the US in March of 1947. IMG<br />
+    Europe and the US many times.
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/8945/images/41260_321848-04719?treeid=&personid=&hintid=&queryId=6a764b7a2e1e2e94f4f919425c139795&usePUB=true&_phsrc=hob142&_phstart=successSource&usePUBJs=true&pId=5250847"
+    >
+      <img title="Battegay ship maniest" src="img/reneeManifest1922.png" /></a
+    ><br />
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/8945/images/WAM1383_141-0349?treeid=&personid=&hintid=&queryId=6a764b7a2e1e2e94f4f919425c139795&usePUB=true&_phsrc=hob142&_phstart=successSource&usePUBJs=true&pId=854374"
+    >
+      <img title="Battegay ship maniest" src="img/reneeManifest1928.png" /></a
+    ><br />
+    <a
+      href="https://www.ancestrylibrary.com/imageviewer/collections/7949/images/CAM1410_355-0351?usePUB=true&_phsrc=hob174&_phstart=successSource&usePUBJs=true&pId=856620"
+    >
+      <img title="Battegay ship maniest" src="img/mathieuManifest1939.jpg" /></a
+    ><br />
+
+    After WWII Bubby’s mother got Micheline out of China through the Red Cross.
+    She came to the US in March of 1947.
+    <br />
+    <a
+      href="https://www.familysearch.org/ark:/61903/3:1:33SQ-G5G3-9R72?i=316&cc=1916078&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AKXHH-WNM"
+    >
+      <img
+        title="Micheline ship manifest"
+        src="img/michelineManifest1947.png" /></a
+    ><br />
+
     Renee (also through the help of Bubby's mother) came to the US in July of
-    1947. IMG IMG travel to Canada Micheline lived with her Mother in NY for
-    about a year and then went to her aunt Renee in Montreal. <br />
-    Bubby’s mother is buried in Breouers section of king solomon memorial park
-    because they were affiliated with bruers at that time.
+    1947.
+    <br />
+    <img src="img/reneeManifest1947.png" />
+    <br />
+    Renne eventually went to Canada with Micheline following her there. They
+    lived and are burried in Montreal.
+    <br />
+    <img src="img/reneeVermont.png" />
+    <br />
   </body>
 </html>
