--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <h1>
       Weil Family <br />
       <img
-        style="solid #ddd; border-radius: 4px; padding: 5px; width: 150px; align-content: center;"
+        style="
+          border-radius: 4px;
+          padding: 5px;
+          width: 150px;
+          align-content: center;
+        "
         src="img/myrtil.png"
       />
     </h1>
@@ -200,8 +205,8 @@
       <img title="Battegay ship maniest" src="img/mathieuManifest1939.jpg" /></a
     ><br />
 
-    After WWII Bubby’s mother got Micheline out of China through the Red Cross.
-    She came to the US in March of 1947.
+    After WWII, Bubby’s mother got Micheline out of China with the help of the
+    Red Cross. She came to the US in March of 1947.
     <br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:33SQ-G5G3-9R72?i=316&cc=1916078&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AKXHH-WNM"
@@ -216,8 +221,8 @@
     <br />
     <img src="img/reneeManifest1947.png" />
     <br />
-    Renne eventually went to Canada with Micheline following her there. They
-    lived and are burried in Montreal.
+    A few years later, Renne went to Canada, with Micheline following her there.
+    They lived and are burried in Montreal.
     <br />
     <img src="img/reneeVermont.png" />
     <br />
