--- a/weil.html
+++ b/weil.html
@@ -9,6 +9,7 @@
       body {
         background-color: #ededed;
         padding: 30px;
+        font-family: 'Segoe UI', Arial, sans-serif;
       }
       h1 {
         color: #333333;
@@ -26,16 +27,32 @@
         margin-top: 20px;
         margin-bottom: 20px;
       }
+      nav {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
+    <ul style="list-style-type: none; margin: 0; padding: 0">
+      <li>
+        <a href="./index.html">Home</a>
+      </li>
+    </ul>
     <h1>
       Weil Family <br />
       <img
-        style="solid #ddd; border-radius: 4px; padding: 5px; width: 150px; align-content: center;"
-        src="myrtil.png"
+        style="
+          border-radius: 4px;
+          padding: 5px;
+          width: 150px;
+          align-content: center;
+        "
+        src="img/myrtil.png"
       />
     </h1>
+
     <h2>People</h2>
     <ul>
       <li>
@@ -47,7 +64,7 @@
           <li>Father: Menachem</li>
         </ul>
         <a href="https://www.findagrave.com/memorial/165148954/emilie-dreyfuss">
-          <img src="miriamEmelieDruyfussGrave.jpeg" />
+          <img src="img/miriamEmelieDruyfussGrave.jpeg" />
         </a>
       </li>
       <li>
@@ -105,54 +122,54 @@
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/7488/images/NYT715_6304-0504?treeid=&personid=&hintid=&queryId=454468a445a819afec0db89ddac1e922&usePUB=true&_phsrc=hob117&_phstart=successSource&usePUBJs=true&pId=1004159594"
     >
-      <img title="ship manifest" src="weilManifest1.jpg" /></a
+      <img title="ship manifest" src="img/weilManifest1.jpg" /></a
     ><br />
 
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9NJ-9WQG?i=593&cc=2299396&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQG2Q-FGGG"
     >
-      <img title="French manifest" src="weilManifest2.jpg" /></a
+      <img title="French manifest" src="img/weilManifest2.jpg" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-L9HD-57W3?i=1170&cc=2060123&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AQP7D-KWWK"
     >
       <img
         title="Myrtil naturalization papers"
-        src="myrtilNutrPapersFront.jpg" /></a
+        src="img/myrtilNutrPapersFront.jpg" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QSQ-G9HD-5Q5K?i=1171&cc=2060123"
     >
       <img
         title="Myrtil naturalization papers"
-        src="myrtilNutrPapersFront2.jpg" /></a
+        src="img/myrtilNutrPapersFront2.jpg" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/2280/images/47294_302022005557_0694-00222?treeid=&personid=&hintid=&queryId=a7276480a87927f53309f90eb2c6ba75&usePUB=true&_phsrc=hob113&_phstart=successSource&usePUBJs=true&pId=6755375"
     >
       <img
         title="Judith Halton naturalization papers"
-        src="judithHaltonNutr.png" /></a
+        src="img/judithHaltonNutr.png" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
     >
-      <img title="Myrtil MD" src="myrtilDoctorCardFront.png" /></a
+      <img title="Myrtil MD" src="img/myrtilDoctorCardFront.png" /></a
     ><br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:3QS7-99QP-K5W3?i=3053&cc=2061540"
     >
-      <img title="Myrtil MD" src="myrtilDoctorCardBack.png" /></a
+      <img title="Myrtil MD" src="img/myrtilDoctorCardBack.png" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/2442/images/m-t0627-02673-00561?usePUB=true&_phsrc=hob187&_phstart=successSource&usePUBJs=true&pId=11958940"
     >
-      <img title="Weil 1940 census" src="weilCensus1940.png" /></a
+      <img title="Weil 1940 census" src="img/weilCensus1940.png" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/2469/images/1899481?usePUB=true&_phsrc=hob216&_phstart=successSource&usePUBJs=true&pId=1483972135"
     >
-      <img title="phone book" src="myrtilPhonebook.png"
+      <img title="phone book" src="img/myrtilPhonebook.png"
     /></a>
     <br />
     <br />
@@ -169,46 +186,57 @@
     >
       <img
         title="Myrtil US consulate death notice"
-        src="myrtilDeathFront.jpg"
+        src="img/myrtilDeathFront.jpg"
       />
     </a>
     <br />
     <img
       title="Myrtil US consulate death notice - back"
-      src="myrtilDeathBack.jpg"
+      src="img/myrtilDeathBack.jpg"
     />
     <br />
-
+    Bubby’s mother is buried in Breuer's section of King Solomon Memorial Park
+    since they were affiliated with the Bruer Kehilla at the time.
     <br />Micheline was taken to China by her aunt Renee Battegay around 1938.
     Renee and her husband Mathieu were wealthy and traveled between China,
     Europe and the US many times.
+    <br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/8945/images/41260_321848-04719?treeid=&personid=&hintid=&queryId=6a764b7a2e1e2e94f4f919425c139795&usePUB=true&_phsrc=hob142&_phstart=successSource&usePUBJs=true&pId=5250847"
     >
-      <img title="Battegay ship maniest" src="reneeManifest1922.png" /></a
+      <img title="Battegay ship maniest" src="img/reneeManifest1922.png" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/8945/images/WAM1383_141-0349?treeid=&personid=&hintid=&queryId=6a764b7a2e1e2e94f4f919425c139795&usePUB=true&_phsrc=hob142&_phstart=successSource&usePUBJs=true&pId=854374"
     >
-      <img title="Battegay ship maniest" src="reneeManifest1928.png" /></a
+      <img title="Battegay ship maniest" src="img/reneeManifest1928.png" /></a
     ><br />
     <a
       href="https://www.ancestrylibrary.com/imageviewer/collections/7949/images/CAM1410_355-0351?usePUB=true&_phsrc=hob174&_phstart=successSource&usePUBJs=true&pId=856620"
     >
-      <img title="Battegay ship maniest" src="mathieuManifest1939.jpg" /></a
+      <img title="Battegay ship maniest" src="img/mathieuManifest1939.jpg" /></a
     ><br />
 
-    After WWII Bubby’s mother got Micheline out of China through the Red Cross
-    and she came to the US in March of 1947.
+    After WWII, Bubby’s mother got Micheline out of China with the help of the
+    Red Cross. She came to the US in March of 1947.
+    <br />
     <a
       href="https://www.familysearch.org/ark:/61903/3:1:33SQ-G5G3-9R72?i=316&cc=1916078&personaUrl=%2Fark%3A%2F61903%2F1%3A1%3AKXHH-WNM"
     >
-      <img title="Micheline ship manifest" src="michelineManifest1947.png" /></a
+      <img
+        title="Micheline ship manifest"
+        src="img/michelineManifest1947.png" /></a
     ><br />
+
     Renee (also through the help of Bubby's mother) came to the US in July of
-    1947. IMG IMG travel to Canada Micheline lived with her Mother in NY for
-    about a year and then went to her aunt Renee in Montreal. <br />
-    Bubby’s mother is buried in Breouers section of king solomon memorial park
-    because they were affiliated with bruers at that time.
+    1947.
+    <br />
+    <img src="img/reneeManifest1947.png" />
+    <br />
+    A few years later, Renne went to Canada, with Micheline following her there.
+    They lived and are burried in Montreal.
+    <br />
+    <img src="img/reneeVermont.png" />
+    <br />
   </body>
 </html>
